--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -35,6 +35,9 @@ nav{
     color: whitesmoke;
     transition: all 0.3s ease-in-out;
     transform: scale(1);
+    display: flex;
+    position: relative;
+    gap: 5px;
 }
 
 .nav_link:hover{
@@ -62,6 +65,11 @@ nav{
     nav{
         width: 100%;
     }
+
+     .nav_link{
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 
@@ -73,4 +81,6 @@ nav{
     nav{
         width: 100%;
     }
+
+   
 }
